bin/parser.out
Created by PLY version 3.4 (http://www.dabeaz.com/ply)

Unused terminals:

    WHILE
    FOR
    FOREACH

Grammar

Rule 0     S' -> start
Rule 1     start -> statement
Rule 2     expression -> ID LPAREN expression RPAREN SEMICOLON
Rule 3     statement -> ID ASSIGN expression SEMICOLON
Rule 4     statement -> IF expression DO expression ELSE expression END
Rule 5     statement -> expression
Rule 6     expression -> expression PLUS expression
Rule 7     expression -> expression MINUS expression
Rule 8     expression -> expression MULTIPLY expression
Rule 9     expression -> expression DIVIDE expression
Rule 10    expression -> expression POW expression
Rule 11    expression -> expression MOD expression
Rule 12    expression -> expression AND expression
Rule 13    expression -> expression OR expression
Rule 14    expression -> expression XOR expression
Rule 15    expression -> expression EQUALS expression
Rule 16    expression -> expression NOT_EQUALS expression
Rule 17    expression -> expression GREATER_THAN expression
Rule 18    expression -> expression LESS_THAN expression
Rule 19    expression -> expression GREATER_THAN_OR_EQUAL expression
Rule 20    expression -> expression LESS_THAN_OR_EQUAL expression
Rule 21    expression -> NOT expression
Rule 22    expression -> TRUE
Rule 23    expression -> FALSE
Rule 24    expression -> MINUS expression
Rule 25    expression -> PLUS expression
Rule 26    expression -> LPAREN expression RPAREN
Rule 27    expression -> expression COMMA expression
Rule 28    expression -> SELECTOR LPAREN expression RPAREN
Rule 29    expression -> NUMBER
Rule 30    expression -> ID
Rule 31    expression -> STRING1
Rule 32    expression -> STRING2
Rule 33    expression -> ID expression

Terminals, with rules where they appear

AND                  : 12
ASSIGN               : 3
COMMA                : 27
DIVIDE               : 9
DO                   : 4
ELSE                 : 4
END                  : 4
EQUALS               : 15
FALSE                : 23
FOR                  : 
FOREACH              : 
GREATER_THAN         : 17
GREATER_THAN_OR_EQUAL : 19
ID                   : 2 3 30 33
IF                   : 4
LESS_THAN            : 18
LESS_THAN_OR_EQUAL   : 20
LPAREN               : 2 26 28
MINUS                : 7 24
MOD                  : 11
MULTIPLY             : 8
NOT                  : 21
NOT_EQUALS           : 16
NUMBER               : 29
OR                   : 13
PLUS                 : 6 25
POW                  : 10
RPAREN               : 2 26 28
SELECTOR             : 28
SEMICOLON            : 2 3
STRING1              : 31
STRING2              : 32
TRUE                 : 22
WHILE                : 
XOR                  : 14
error                : 

Nonterminals, with rules where they appear

expression           : 2 3 4 4 4 5 6 6 7 7 8 8 9 9 10 10 11 11 12 12 13 13 14 14 15 15 16 16 17 17 18 18 19 19 20 20 21 24 25 26 27 27 28 33
start                : 0
statement            : 1

Parsing method: LALR

state 0

    (0) S' -> . start
    (1) start -> . statement
    (3) statement -> . ID ASSIGN expression SEMICOLON
    (4) statement -> . IF expression DO expression ELSE expression END
    (5) statement -> . expression
    (2) expression -> . ID LPAREN expression RPAREN SEMICOLON
    (6) expression -> . expression PLUS expression
    (7) expression -> . expression MINUS expression
    (8) expression -> . expression MULTIPLY expression
    (9) expression -> . expression DIVIDE expression
    (10) expression -> . expression POW expression
    (11) expression -> . expression MOD expression
    (12) expression -> . expression AND expression
    (13) expression -> . expression OR expression
    (14) expression -> . expression XOR expression
    (15) expression -> . expression EQUALS expression
    (16) expression -> . expression NOT_EQUALS expression
    (17) expression -> . expression GREATER_THAN expression
    (18) expression -> . expression LESS_THAN expression
    (19) expression -> . expression GREATER_THAN_OR_EQUAL expression
    (20) expression -> . expression LESS_THAN_OR_EQUAL expression
    (21) expression -> . NOT expression
    (22) expression -> . TRUE
    (23) expression -> . FALSE
    (24) expression -> . MINUS expression
    (25) expression -> . PLUS expression
    (26) expression -> . LPAREN expression RPAREN
    (27) expression -> . expression COMMA expression
    (28) expression -> . SELECTOR LPAREN expression RPAREN
    (29) expression -> . NUMBER
    (30) expression -> . ID
    (31) expression -> . STRING1
    (32) expression -> . STRING2
    (33) expression -> . ID expression

    ID              shift and go to state 11
    IF              shift and go to state 12
    NOT             shift and go to state 14
    TRUE            shift and go to state 3
    FALSE           shift and go to state 13
    MINUS           shift and go to state 4
    PLUS            shift and go to state 6
    LPAREN          shift and go to state 10
    SELECTOR        shift and go to state 2
    NUMBER          shift and go to state 1
    STRING1         shift and go to state 9
    STRING2         shift and go to state 8

    start                          shift and go to state 5
    expression                     shift and go to state 15
    statement                      shift and go to state 7

state 1

    (29) expression -> NUMBER .

    PLUS            reduce using rule 29 (expression -> NUMBER .)
    MINUS           reduce using rule 29 (expression -> NUMBER .)
    MULTIPLY        reduce using rule 29 (expression -> NUMBER .)
    DIVIDE          reduce using rule 29 (expression -> NUMBER .)
    POW             reduce using rule 29 (expression -> NUMBER .)
    MOD             reduce using rule 29 (expression -> NUMBER .)
    AND             reduce using rule 29 (expression -> NUMBER .)
    OR              reduce using rule 29 (expression -> NUMBER .)
    XOR             reduce using rule 29 (expression -> NUMBER .)
    EQUALS          reduce using rule 29 (expression -> NUMBER .)
    NOT_EQUALS      reduce using rule 29 (expression -> NUMBER .)
    GREATER_THAN    reduce using rule 29 (expression -> NUMBER .)
    LESS_THAN       reduce using rule 29 (expression -> NUMBER .)
    GREATER_THAN_OR_EQUAL reduce using rule 29 (expression -> NUMBER .)
    LESS_THAN_OR_EQUAL reduce using rule 29 (expression -> NUMBER .)
    COMMA           reduce using rule 29 (expression -> NUMBER .)
    $end            reduce using rule 29 (expression -> NUMBER .)
    RPAREN          reduce using rule 29 (expression -> NUMBER .)
    DO              reduce using rule 29 (expression -> NUMBER .)
    SEMICOLON       reduce using rule 29 (expression -> NUMBER .)
    ELSE            reduce using rule 29 (expression -> NUMBER .)
    END             reduce using rule 29 (expression -> NUMBER .)


state 2

    (28) expression -> SELECTOR . LPAREN expression RPAREN

    LPAREN          shift and go to state 16


state 3

    (22) expression -> TRUE .

    PLUS            reduce using rule 22 (expression -> TRUE .)
    MINUS           reduce using rule 22 (expression -> TRUE .)
    MULTIPLY        reduce using rule 22 (expression -> TRUE .)
    DIVIDE          reduce using rule 22 (expression -> TRUE .)
    POW             reduce using rule 22 (expression -> TRUE .)
    MOD             reduce using rule 22 (expression -> TRUE .)
    AND             reduce using rule 22 (expression -> TRUE .)
    OR              reduce using rule 22 (expression -> TRUE .)
    XOR             reduce using rule 22 (expression -> TRUE .)
    EQUALS          reduce using rule 22 (expression -> TRUE .)
    NOT_EQUALS      reduce using rule 22 (expression -> TRUE .)
    GREATER_THAN    reduce using rule 22 (expression -> TRUE .)
    LESS_THAN       reduce using rule 22 (expression -> TRUE .)
    GREATER_THAN_OR_EQUAL reduce using rule 22 (expression -> TRUE .)
    LESS_THAN_OR_EQUAL reduce using rule 22 (expression -> TRUE .)
    COMMA           reduce using rule 22 (expression -> TRUE .)
    $end            reduce using rule 22 (expression -> TRUE .)
    RPAREN          reduce using rule 22 (expression -> TRUE .)
    DO              reduce using rule 22 (expression -> TRUE .)
    SEMICOLON       reduce using rule 22 (expression -> TRUE .)
    ELSE            reduce using rule 22 (expression -> TRUE .)
    END             reduce using rule 22 (expression -> TRUE .)


state 4

    (24) expression -> MINUS . expression
    (2) expression -> . ID LPAREN expression RPAREN SEMICOLON
    (6) expression -> . expression PLUS expression
    (7) expression -> . expression MINUS expression
    (8) expression -> . expression MULTIPLY expression
    (9) expression -> . expression DIVIDE expression
    (10) expression -> . expression POW expression
    (11) expression -> . expression MOD expression
    (12) expression -> . expression AND expression
    (13) expression -> . expression OR expression
    (14) expression -> . expression XOR expression
    (15) expression -> . expression EQUALS expression
    (16) expression -> . expression NOT_EQUALS expression
    (17) expression -> . expression GREATER_THAN expression
    (18) expression -> . expression LESS_THAN expression
    (19) expression -> . expression GREATER_THAN_OR_EQUAL expression
    (20) expression -> . expression LESS_THAN_OR_EQUAL expression
    (21) expression -> . NOT expression
    (22) expression -> . TRUE
    (23) expression -> . FALSE
    (24) expression -> . MINUS expression
    (25) expression -> . PLUS expression
    (26) expression -> . LPAREN expression RPAREN
    (27) expression -> . expression COMMA expression
    (28) expression -> . SELECTOR LPAREN expression RPAREN
    (29) expression -> . NUMBER
    (30) expression -> . ID
    (31) expression -> . STRING1
    (32) expression -> . STRING2
    (33) expression -> . ID expression

    ID              shift and go to state 17
    NOT             shift and go to state 14
    TRUE            shift and go to state 3
    FALSE           shift and go to state 13
    MINUS           shift and go to state 4
    PLUS            shift and go to state 6
    LPAREN          shift and go to state 10
    SELECTOR        shift and go to state 2
    NUMBER          shift and go to state 1
    STRING1         shift and go to state 9
    STRING2         shift and go to state 8

    expression                     shift and go to state 18

state 5

    (0) S' -> start .



state 6

    (25) expression -> PLUS . expression
    (2) expression -> . ID LPAREN expression RPAREN SEMICOLON
    (6) expression -> . expression PLUS expression
    (7) expression -> . expression MINUS expression
    (8) expression -> . expression MULTIPLY expression
    (9) expression -> . expression DIVIDE expression
    (10) expression -> . expression POW expression
    (11) expression -> . expression MOD expression
    (12) expression -> . expression AND expression
    (13) expression -> . expression OR expression
    (14) expression -> . expression XOR expression
    (15) expression -> . expression EQUALS expression
    (16) expression -> . expression NOT_EQUALS expression
    (17) expression -> . expression GREATER_THAN expression
    (18) expression -> . expression LESS_THAN expression
    (19) expression -> . expression GREATER_THAN_OR_EQUAL expression
    (20) expression -> . expression LESS_THAN_OR_EQUAL expression
    (21) expression -> . NOT expression
    (22) expression -> . TRUE
    (23) expression -> . FALSE
    (24) expression -> . MINUS expression
    (25) expression -> . PLUS expression
    (26) expression -> . LPAREN expression RPAREN
    (27) expression -> . expression COMMA expression
    (28) expression -> . SELECTOR LPAREN expression RPAREN
    (29) expression -> . NUMBER
    (30) expression -> . ID
    (31) expression -> . STRING1
    (32) expression -> . STRING2
    (33) expression -> . ID expression

    ID              shift and go to state 17
    NOT             shift and go to state 14
    TRUE            shift and go to state 3
    FALSE           shift and go to state 13
    MINUS           shift and go to state 4
    PLUS            shift and go to state 6
    LPAREN          shift and go to state 10
    SELECTOR        shift and go to state 2
    NUMBER          shift and go to state 1
    STRING1         shift and go to state 9
    STRING2         shift and go to state 8

    expression                     shift and go to state 19

state 7

    (1) start -> statement .

    $end            reduce using rule 1 (start -> statement .)


state 8

    (32) expression -> STRING2 .

    PLUS            reduce using rule 32 (expression -> STRING2 .)
    MINUS           reduce using rule 32 (expression -> STRING2 .)
    MULTIPLY        reduce using rule 32 (expression -> STRING2 .)
    DIVIDE          reduce using rule 32 (expression -> STRING2 .)
    POW             reduce using rule 32 (expression -> STRING2 .)
    MOD             reduce using rule 32 (expression -> STRING2 .)
    AND             reduce using rule 32 (expression -> STRING2 .)
    OR              reduce using rule 32 (expression -> STRING2 .)
    XOR             reduce using rule 32 (expression -> STRING2 .)
    EQUALS          reduce using rule 32 (expression -> STRING2 .)
    NOT_EQUALS      reduce using rule 32 (expression -> STRING2 .)
    GREATER_THAN    reduce using rule 32 (expression -> STRING2 .)
    LESS_THAN       reduce using rule 32 (expression -> STRING2 .)
    GREATER_THAN_OR_EQUAL reduce using rule 32 (expression -> STRING2 .)
    LESS_THAN_OR_EQUAL reduce using rule 32 (expression -> STRING2 .)
    COMMA           reduce using rule 32 (expression -> STRING2 .)
    $end            reduce using rule 32 (expression -> STRING2 .)
    RPAREN          reduce using rule 32 (expression -> STRING2 .)
    DO              reduce using rule 32 (expression -> STRING2 .)
    SEMICOLON       reduce using rule 32 (expression -> STRING2 .)
    ELSE            reduce using rule 32 (expression -> STRING2 .)
    END             reduce using rule 32 (expression -> STRING2 .)


state 9

    (31) expression -> STRING1 .

    PLUS            reduce using rule 31 (expression -> STRING1 .)
    MINUS           reduce using rule 31 (expression -> STRING1 .)
    MULTIPLY        reduce using rule 31 (expression -> STRING1 .)
    DIVIDE          reduce using rule 31 (expression -> STRING1 .)
    POW             reduce using rule 31 (expression -> STRING1 .)
    MOD             reduce using rule 31 (expression -> STRING1 .)
    AND             reduce using rule 31 (expression -> STRING1 .)
    OR              reduce using rule 31 (expression -> STRING1 .)
    XOR             reduce using rule 31 (expression -> STRING1 .)
    EQUALS          reduce using rule 31 (expression -> STRING1 .)
    NOT_EQUALS      reduce using rule 31 (expression -> STRING1 .)
    GREATER_THAN    reduce using rule 31 (expression -> STRING1 .)
    LESS_THAN       reduce using rule 31 (expression -> STRING1 .)
    GREATER_THAN_OR_EQUAL reduce using rule 31 (expression -> STRING1 .)
    LESS_THAN_OR_EQUAL reduce using rule 31 (expression -> STRING1 .)
    COMMA           reduce using rule 31 (expression -> STRING1 .)
    $end            reduce using rule 31 (expression -> STRING1 .)
    RPAREN          reduce using rule 31 (expression -> STRING1 .)
    DO              reduce using rule 31 (expression -> STRING1 .)
    SEMICOLON       reduce using rule 31 (expression -> STRING1 .)
    ELSE            reduce using rule 31 (expression -> STRING1 .)
    END             reduce using rule 31 (expression -> STRING1 .)


state 10

    (26) expression -> LPAREN . expression RPAREN
    (2) expression -> . ID LPAREN expression RPAREN SEMICOLON
    (6) expression -> . expression PLUS expression
    (7) expression -> . expression MINUS expression
    (8) expression -> . expression MULTIPLY expression
    (9) expression -> . expression DIVIDE expression
    (10) expression -> . expression POW expression
    (11) expression -> . expression MOD expression
    (12) expression -> . expression AND expression
    (13) expression -> . expression OR expression
    (14) expression -> . expression XOR expression
    (15) expression -> . expression EQUALS expression
    (16) expression -> . expression NOT_EQUALS expression
    (17) expression -> . expression GREATER_THAN expression
    (18) expression -> . expression LESS_THAN expression
    (19) expression -> . expression GREATER_THAN_OR_EQUAL expression
    (20) expression -> . expression LESS_THAN_OR_EQUAL expression
    (21) expression -> . NOT expression
    (22) expression -> . TRUE
    (23) expression -> . FALSE
    (24) expression -> . MINUS expression
    (25) expression -> . PLUS expression
    (26) expression -> . LPAREN expression RPAREN
    (27) expression -> . expression COMMA expression
    (28) expression -> . SELECTOR LPAREN expression RPAREN
    (29) expression -> . NUMBER
    (30) expression -> . ID
    (31) expression -> . STRING1
    (32) expression -> . STRING2
    (33) expression -> . ID expression

    ID              shift and go to state 17
    NOT             shift and go to state 14
    TRUE            shift and go to state 3
    FALSE           shift and go to state 13
    MINUS           shift and go to state 4
    PLUS            shift and go to state 6
    LPAREN          shift and go to state 10
    SELECTOR        shift and go to state 2
    NUMBER          shift and go to state 1
    STRING1         shift and go to state 9
    STRING2         shift and go to state 8

    expression                     shift and go to state 20

state 11

    (3) statement -> ID . ASSIGN expression SEMICOLON
    (2) expression -> ID . LPAREN expression RPAREN SEMICOLON
    (30) expression -> ID .
    (33) expression -> ID . expression
    (2) expression -> . ID LPAREN expression RPAREN SEMICOLON
    (6) expression -> . expression PLUS expression
    (7) expression -> . expression MINUS expression
    (8) expression -> . expression MULTIPLY expression
    (9) expression -> . expression DIVIDE expression
    (10) expression -> . expression POW expression
    (11) expression -> . expression MOD expression
    (12) expression -> . expression AND expression
    (13) expression -> . expression OR expression
    (14) expression -> . expression XOR expression
    (15) expression -> . expression EQUALS expression
    (16) expression -> . expression NOT_EQUALS expression
    (17) expression -> . expression GREATER_THAN expression
    (18) expression -> . expression LESS_THAN expression
    (19) expression -> . expression GREATER_THAN_OR_EQUAL expression
    (20) expression -> . expression LESS_THAN_OR_EQUAL expression
    (21) expression -> . NOT expression
    (22) expression -> . TRUE
    (23) expression -> . FALSE
    (24) expression -> . MINUS expression
    (25) expression -> . PLUS expression
    (26) expression -> . LPAREN expression RPAREN
    (27) expression -> . expression COMMA expression
    (28) expression -> . SELECTOR LPAREN expression RPAREN
    (29) expression -> . NUMBER
    (30) expression -> . ID
    (31) expression -> . STRING1
    (32) expression -> . STRING2
    (33) expression -> . ID expression

  ! shift/reduce conflict for MINUS resolved as shift
  ! shift/reduce conflict for PLUS resolved as shift
    ASSIGN          shift and go to state 21
    LPAREN          shift and go to state 22
    MULTIPLY        reduce using rule 30 (expression -> ID .)
    DIVIDE          reduce using rule 30 (expression -> ID .)
    POW             reduce using rule 30 (expression -> ID .)
    MOD             reduce using rule 30 (expression -> ID .)
    AND             reduce using rule 30 (expression -> ID .)
    OR              reduce using rule 30 (expression -> ID .)
    XOR             reduce using rule 30 (expression -> ID .)
    EQUALS          reduce using rule 30 (expression -> ID .)
    NOT_EQUALS      reduce using rule 30 (expression -> ID .)
    GREATER_THAN    reduce using rule 30 (expression -> ID .)
    LESS_THAN       reduce using rule 30 (expression -> ID .)
    GREATER_THAN_OR_EQUAL reduce using rule 30 (expression -> ID .)
    LESS_THAN_OR_EQUAL reduce using rule 30 (expression -> ID .)
    COMMA           reduce using rule 30 (expression -> ID .)
    $end            reduce using rule 30 (expression -> ID .)
    ID              shift and go to state 17
    NOT             shift and go to state 14
    TRUE            shift and go to state 3
    FALSE           shift and go to state 13
    MINUS           shift and go to state 4
    PLUS            shift and go to state 6
    SELECTOR        shift and go to state 2
    NUMBER          shift and go to state 1
    STRING1         shift and go to state 9
    STRING2         shift and go to state 8

  ! PLUS            [ reduce using rule 30 (expression -> ID .) ]
  ! MINUS           [ reduce using rule 30 (expression -> ID .) ]

    expression                     shift and go to state 23

state 12

    (4) statement -> IF . expression DO expression ELSE expression END
    (2) expression -> . ID LPAREN expression RPAREN SEMICOLON
    (6) expression -> . expression PLUS expression
    (7) expression -> . expression MINUS expression
    (8) expression -> . expression MULTIPLY expression
    (9) expression -> . expression DIVIDE expression
    (10) expression -> . expression POW expression
    (11) expression -> . expression MOD expression
    (12) expression -> . expression AND expression
    (13) expression -> . expression OR expression
    (14) expression -> . expression XOR expression
    (15) expression -> . expression EQUALS expression
    (16) expression -> . expression NOT_EQUALS expression
    (17) expression -> . expression GREATER_THAN expression
    (18) expression -> . expression LESS_THAN expression
    (19) expression -> . expression GREATER_THAN_OR_EQUAL expression
    (20) expression -> . expression LESS_THAN_OR_EQUAL expression
    (21) expression -> . NOT expression
    (22) expression -> . TRUE
    (23) expression -> . FALSE
    (24) expression -> . MINUS expression
    (25) expression -> . PLUS expression
    (26) expression -> . LPAREN expression RPAREN
    (27) expression -> . expression COMMA expression
    (28) expression -> . SELECTOR LPAREN expression RPAREN
    (29) expression -> . NUMBER
    (30) expression -> . ID
    (31) expression -> . STRING1
    (32) expression -> . STRING2
    (33) expression -> . ID expression

    ID              shift and go to state 17
    NOT             shift and go to state 14
    TRUE            shift and go to state 3
    FALSE           shift and go to state 13
    MINUS           shift and go to state 4
    PLUS            shift and go to state 6
    LPAREN          shift and go to state 10
    SELECTOR        shift and go to state 2
    NUMBER          shift and go to state 1
    STRING1         shift and go to state 9
    STRING2         shift and go to state 8

    expression                     shift and go to state 24

state 13

    (23) expression -> FALSE .

    PLUS            reduce using rule 23 (expression -> FALSE .)
    MINUS           reduce using rule 23 (expression -> FALSE .)
    MULTIPLY        reduce using rule 23 (expression -> FALSE .)
    DIVIDE          reduce using rule 23 (expression -> FALSE .)
    POW             reduce using rule 23 (expression -> FALSE .)
    MOD             reduce using rule 23 (expression -> FALSE .)
    AND             reduce using rule 23 (expression -> FALSE .)
    OR              reduce using rule 23 (expression -> FALSE .)
    XOR             reduce using rule 23 (expression -> FALSE .)
    EQUALS          reduce using rule 23 (expression -> FALSE .)
    NOT_EQUALS      reduce using rule 23 (expression -> FALSE .)
    GREATER_THAN    reduce using rule 23 (expression -> FALSE .)
    LESS_THAN       reduce using rule 23 (expression -> FALSE .)
    GREATER_THAN_OR_EQUAL reduce using rule 23 (expression -> FALSE .)
    LESS_THAN_OR_EQUAL reduce using rule 23 (expression -> FALSE .)
    COMMA           reduce using rule 23 (expression -> FALSE .)
    $end            reduce using rule 23 (expression -> FALSE .)
    RPAREN          reduce using rule 23 (expression -> FALSE .)
    DO              reduce using rule 23 (expression -> FALSE .)
    SEMICOLON       reduce using rule 23 (expression -> FALSE .)
    ELSE            reduce using rule 23 (expression -> FALSE .)
    END             reduce using rule 23 (expression -> FALSE .)


state 14

    (21) expression -> NOT . expression
    (2) expression -> . ID LPAREN expression RPAREN SEMICOLON
    (6) expression -> . expression PLUS expression
    (7) expression -> . expression MINUS expression
    (8) expression -> . expression MULTIPLY expression
    (9) expression -> . expression DIVIDE expression
    (10) expression -> . expression POW expression
    (11) expression -> . expression MOD expression
    (12) expression -> . expression AND expression
    (13) expression -> . expression OR expression
    (14) expression -> . expression XOR expression
    (15) expression -> . expression EQUALS expression
    (16) expression -> . expression NOT_EQUALS expression
    (17) expression -> . expression GREATER_THAN expression
    (18) expression -> . expression LESS_THAN expression
    (19) expression -> . expression GREATER_THAN_OR_EQUAL expression
    (20) expression -> . expression LESS_THAN_OR_EQUAL expression
    (21) expression -> . NOT expression
    (22) expression -> . TRUE
    (23) expression -> . FALSE
    (24) expression -> . MINUS expression
    (25) expression -> . PLUS expression
    (26) expression -> . LPAREN expression RPAREN
    (27) expression -> . expression COMMA expression
    (28) expression -> . SELECTOR LPAREN expression RPAREN
    (29) expression -> . NUMBER
    (30) expression -> . ID
    (31) expression -> . STRING1
    (32) expression -> . STRING2
    (33) expression -> . ID expression

    ID              shift and go to state 17
    NOT             shift and go to state 14
    TRUE            shift and go to state 3
    FALSE           shift and go to state 13
    MINUS           shift and go to state 4
    PLUS            shift and go to state 6
    LPAREN          shift and go to state 10
    SELECTOR        shift and go to state 2
    NUMBER          shift and go to state 1
    STRING1         shift and go to state 9
    STRING2         shift and go to state 8

    expression                     shift and go to state 25

state 15

    (5) statement -> expression .
    (6) expression -> expression . PLUS expression
    (7) expression -> expression . MINUS expression
    (8) expression -> expression . MULTIPLY expression
    (9) expression -> expression . DIVIDE expression
    (10) expression -> expression . POW expression
    (11) expression -> expression . MOD expression
    (12) expression -> expression . AND expression
    (13) expression -> expression . OR expression
    (14) expression -> expression . XOR expression
    (15) expression -> expression . EQUALS expression
    (16) expression -> expression . NOT_EQUALS expression
    (17) expression -> expression . GREATER_THAN expression
    (18) expression -> expression . LESS_THAN expression
    (19) expression -> expression . GREATER_THAN_OR_EQUAL expression
    (20) expression -> expression . LESS_THAN_OR_EQUAL expression
    (27) expression -> expression . COMMA expression

    $end            reduce using rule 5 (statement -> expression .)
    PLUS            shift and go to state 36
    MINUS           shift and go to state 40
    MULTIPLY        shift and go to state 37
    DIVIDE          shift and go to state 28
    POW             shift and go to state 31
    MOD             shift and go to state 41
    AND             shift and go to state 26
    OR              shift and go to state 34
    XOR             shift and go to state 27
    EQUALS          shift and go to state 33
    NOT_EQUALS      shift and go to state 29
    GREATER_THAN    shift and go to state 35
    LESS_THAN       shift and go to state 39
    GREATER_THAN_OR_EQUAL shift and go to state 30
    LESS_THAN_OR_EQUAL shift and go to state 32
    COMMA           shift and go to state 38


state 16

    (28) expression -> SELECTOR LPAREN . expression RPAREN
    (2) expression -> . ID LPAREN expression RPAREN SEMICOLON
    (6) expression -> . expression PLUS expression
    (7) expression -> . expression MINUS expression
    (8) expression -> . expression MULTIPLY expression
    (9) expression -> . expression DIVIDE expression
    (10) expression -> . expression POW expression
    (11) expression -> . expression MOD expression
    (12) expression -> . expression AND expression
    (13) expression -> . expression OR expression
    (14) expression -> . expression XOR expression
    (15) expression -> . expression EQUALS expression
    (16) expression -> . expression NOT_EQUALS expression
    (17) expression -> . expression GREATER_THAN expression
    (18) expression -> . expression LESS_THAN expression
    (19) expression -> . expression GREATER_THAN_OR_EQUAL expression
    (20) expression -> . expression LESS_THAN_OR_EQUAL expression
    (21) expression -> . NOT expression
    (22) expression -> . TRUE
    (23) expression -> . FALSE
    (24) expression -> . MINUS expression
    (25) expression -> . PLUS expression
    (26) expression -> . LPAREN expression RPAREN
    (27) expression -> . expression COMMA expression
    (28) expression -> . SELECTOR LPAREN expression RPAREN
    (29) expression -> . NUMBER
    (30) expression -> . ID
    (31) expression -> . STRING1
    (32) expression -> . STRING2
    (33) expression -> . ID expression

    ID              shift and go to state 17
    NOT             shift and go to state 14
    TRUE            shift and go to state 3
    FALSE           shift and go to state 13
    MINUS           shift and go to state 4
    PLUS            shift and go to state 6
    LPAREN          shift and go to state 10
    SELECTOR        shift and go to state 2
    NUMBER          shift and go to state 1
    STRING1         shift and go to state 9
    STRING2         shift and go to state 8

    expression                     shift and go to state 42

state 17

    (2) expression -> ID . LPAREN expression RPAREN SEMICOLON
    (30) expression -> ID .
    (33) expression -> ID . expression
    (2) expression -> . ID LPAREN expression RPAREN SEMICOLON
    (6) expression -> . expression PLUS expression
    (7) expression -> . expression MINUS expression
    (8) expression -> . expression MULTIPLY expression
    (9) expression -> . expression DIVIDE expression
    (10) expression -> . expression POW expression
    (11) expression -> . expression MOD expression
    (12) expression -> . expression AND expression
    (13) expression -> . expression OR expression
    (14) expression -> . expression XOR expression
    (15) expression -> . expression EQUALS expression
    (16) expression -> . expression NOT_EQUALS expression
    (17) expression -> . expression GREATER_THAN expression
    (18) expression -> . expression LESS_THAN expression
    (19) expression -> . expression GREATER_THAN_OR_EQUAL expression
    (20) expression -> . expression LESS_THAN_OR_EQUAL expression
    (21) expression -> . NOT expression
    (22) expression -> . TRUE
    (23) expression -> . FALSE
    (24) expression -> . MINUS expression
    (25) expression -> . PLUS expression
    (26) expression -> . LPAREN expression RPAREN
    (27) expression -> . expression COMMA expression
    (28) expression -> . SELECTOR LPAREN expression RPAREN
    (29) expression -> . NUMBER
    (30) expression -> . ID
    (31) expression -> . STRING1
    (32) expression -> . STRING2
    (33) expression -> . ID expression

  ! shift/reduce conflict for MINUS resolved as shift
  ! shift/reduce conflict for PLUS resolved as shift
    LPAREN          shift and go to state 22
    MULTIPLY        reduce using rule 30 (expression -> ID .)
    DIVIDE          reduce using rule 30 (expression -> ID .)
    POW             reduce using rule 30 (expression -> ID .)
    MOD             reduce using rule 30 (expression -> ID .)
    AND             reduce using rule 30 (expression -> ID .)
    OR              reduce using rule 30 (expression -> ID .)
    XOR             reduce using rule 30 (expression -> ID .)
    EQUALS          reduce using rule 30 (expression -> ID .)
    NOT_EQUALS      reduce using rule 30 (expression -> ID .)
    GREATER_THAN    reduce using rule 30 (expression -> ID .)
    LESS_THAN       reduce using rule 30 (expression -> ID .)
    GREATER_THAN_OR_EQUAL reduce using rule 30 (expression -> ID .)
    LESS_THAN_OR_EQUAL reduce using rule 30 (expression -> ID .)
    COMMA           reduce using rule 30 (expression -> ID .)
    $end            reduce using rule 30 (expression -> ID .)
    RPAREN          reduce using rule 30 (expression -> ID .)
    DO              reduce using rule 30 (expression -> ID .)
    SEMICOLON       reduce using rule 30 (expression -> ID .)
    ELSE            reduce using rule 30 (expression -> ID .)
    END             reduce using rule 30 (expression -> ID .)
    ID              shift and go to state 17
    NOT             shift and go to state 14
    TRUE            shift and go to state 3
    FALSE           shift and go to state 13
    MINUS           shift and go to state 4
    PLUS            shift and go to state 6
    SELECTOR        shift and go to state 2
    NUMBER          shift and go to state 1
    STRING1         shift and go to state 9
    STRING2         shift and go to state 8

  ! PLUS            [ reduce using rule 30 (expression -> ID .) ]
  ! MINUS           [ reduce using rule 30 (expression -> ID .) ]

    expression                     shift and go to state 23

state 18

    (24) expression -> MINUS expression .
    (6) expression -> expression . PLUS expression
    (7) expression -> expression . MINUS expression
    (8) expression -> expression . MULTIPLY expression
    (9) expression -> expression . DIVIDE expression
    (10) expression -> expression . POW expression
    (11) expression -> expression . MOD expression
    (12) expression -> expression . AND expression
    (13) expression -> expression . OR expression
    (14) expression -> expression . XOR expression
    (15) expression -> expression . EQUALS expression
    (16) expression -> expression . NOT_EQUALS expression
    (17) expression -> expression . GREATER_THAN expression
    (18) expression -> expression . LESS_THAN expression
    (19) expression -> expression . GREATER_THAN_OR_EQUAL expression
    (20) expression -> expression . LESS_THAN_OR_EQUAL expression
    (27) expression -> expression . COMMA expression

    PLUS            reduce using rule 24 (expression -> MINUS expression .)
    MINUS           reduce using rule 24 (expression -> MINUS expression .)
    MULTIPLY        reduce using rule 24 (expression -> MINUS expression .)
    DIVIDE          reduce using rule 24 (expression -> MINUS expression .)
    POW             reduce using rule 24 (expression -> MINUS expression .)
    MOD             reduce using rule 24 (expression -> MINUS expression .)
    AND             reduce using rule 24 (expression -> MINUS expression .)
    OR              reduce using rule 24 (expression -> MINUS expression .)
    XOR             reduce using rule 24 (expression -> MINUS expression .)
    EQUALS          reduce using rule 24 (expression -> MINUS expression .)
    NOT_EQUALS      reduce using rule 24 (expression -> MINUS expression .)
    GREATER_THAN    reduce using rule 24 (expression -> MINUS expression .)
    LESS_THAN       reduce using rule 24 (expression -> MINUS expression .)
    GREATER_THAN_OR_EQUAL reduce using rule 24 (expression -> MINUS expression .)
    LESS_THAN_OR_EQUAL reduce using rule 24 (expression -> MINUS expression .)
    COMMA           reduce using rule 24 (expression -> MINUS expression .)
    $end            reduce using rule 24 (expression -> MINUS expression .)
    RPAREN          reduce using rule 24 (expression -> MINUS expression .)
    DO              reduce using rule 24 (expression -> MINUS expression .)
    SEMICOLON       reduce using rule 24 (expression -> MINUS expression .)
    ELSE            reduce using rule 24 (expression -> MINUS expression .)
    END             reduce using rule 24 (expression -> MINUS expression .)
